# mimic1-spanish

./: .gitmodules  ACKNOWLEDGEMENTS  COPYING  README.md  meson.build  meson_options.txt
include/: es_lang.h
src/: es_init.c  es_lang_internal.h  mimic_spanish_plugin.c
